stop jumping around the page by using fixed heights again

--- a/assets/styles/pages/_api.scss
+++ b/assets/styles/pages/_api.scss
@@ -72,15 +72,15 @@ $ddpurple: #632ca6;
         min-height: 500px;
 
         @include media-breakpoint-up(md) {
-            min-height: 550px;
+            height: 600px;
         }
 
         @include media-breakpoint-up(lg) {
-            min-height: 600px;
+            height: 600px;
         }
 
         @include media-breakpoint-up(xl) {
-            min-height: 300px;
+            height: 600px;
         }
     }
 
@@ -106,7 +106,7 @@ $ddpurple: #632ca6;
     }
 
     .chroma {
-        max-height: 350px;
+        max-height: 300px;
         overflow-wrap: break-word;
         white-space: inherit;
     }
